# BrowserJQuery

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
browserjquery/: __init__.py  jquery.py  jquery_scripts.py  settings.py  text_queries.py
browserjquery/tests/: test_basic.py
docs/: requirements.txt  rtd_requirements.txt
docs/source/: README.md  browserjquery.md  browserjquery.tests.md  conf.py  contributing.md  examples.md  index.md  installation.md  modules.md
requirements/: base.txt
tests/: conftest.py  test_fixtures.py  test_functionality.py  test_jquery.py  test_text_queries.py  test_webelement_redirection.py
tests/data/: test_page.html
